# claude-code-rust

./: .gitignore  ACHIEVEMENT_SUMMARY.md  CLAUDE.md  CODE_COMPLETION_REPORT.md  COMMAND_SUPPORT_ANALYSIS.md  CORE_IMPLEMENTATION_PLAN.md  Cargo.toml  Dockerfile  Dockerfile.dev  Dockerfile.production  FINAL_ARCHITECTURE.md  FINAL_CELEBRATION_REPORT.md  FINAL_FEATURE_DEMO.md  FINAL_REPORT.md  FINAL_STATUS_REPORT.md  FINAL_SUMMARY.md  IMPLEMENTATION_SUMMARY.md  MIGRATION_GUIDE.md  Makefile  PERFORMANCE_COMPARISON.md  PROJECT_COMPLETION_ANALYSIS.md  PROJECT_COMPLETION_REPORT.md  PROJECT_STATUS_REALITY_CHECK.md  PROJECT_SUMMARY.md  README.md  README_EN.md  REQUIREMENTS_VS_IMPLEMENTATION.md  SUPER_ULTIMATE_COMPLETION_REPORT.md  TERMINAL_UI_GUIDE.md  TESTING_SUMMARY.md  ULTIMATE_COMPLETION_REPORT.md  ULTIMATE_SUCCESS_CELEBRATION.md  claude.json  docker-compose.dev.yml  docker-compose.production.yml  docker-compose.yml
.github/workflows/: ci.yml
benches/: comprehensive_benchmark.rs  performance_benchmarks.rs  simple_benchmark.rs
examples/: terminal_ui_demo.rs
scripts/: deploy.sh  dev-setup.sh  final-demo.sh
src/: lib.rs  main.rs
src/agent/: mod.rs
src/analytics/: mod.rs
src/cache/: advanced.rs  mod.rs
src/cli/: mod.rs
src/cloud/: mod.rs
src/collaboration/: mod.rs
src/config/: advanced.rs  mod.rs
src/context/: mod.rs
src/conversation/: mod.rs
src/cost/: mod.rs
src/data_processing/: mod.rs
src/database/: mod.rs
src/devops/: mod.rs
src/distributed/: mod.rs
src/error/: mod.rs
src/fs/: mod.rs
src/gateway/: mod.rs
src/git/: mod.rs
src/image_processing/: mod.rs
src/inference/: mod.rs
src/mcp/: mod.rs
src/ml/: mod.rs
src/monitoring/: mod.rs
src/network/: mod.rs
src/plugins/: advanced.rs  mod.rs
src/process/: mod.rs
src/refactor/: mod.rs
src/search/: mod.rs
src/security/: mod.rs
src/steering/: mod.rs
src/streaming/: mod.rs
src/syntax_highlighting/: mod.rs
src/tools/: builtin.rs  mod.rs
src/ui/: mod.rs  terminal_app.rs
src/watcher/: mod.rs
src/web/: advanced.rs  mod.rs
src/web/templates/: chat.html  dashboard.html  index.html
src/workflow/: mod.rs
tests/: integration_tests.rs  unit_tests.rs
