[package]
name = "claude-rust"
version = "0.1.0"
edition = "2021"
authors = ["Claude Code Rust Team"]
description = "A Rust implementation of Claude Code - an agentic coding tool"
license = "MIT"
repository = "https://github.com/anthropics/claude-code-rust"

[lib]
name = "claude_rust"
path = "src/lib.rs"

[[bin]]
name = "claude-rust"
path = "src/main.rs"

[[example]]
name = "terminal_ui_demo"
path = "examples/terminal_ui_demo.rs"

[dependencies]
# CLI 解析
clap = { version = "4.4", features = ["derive", "env"] }

# 异步运行时
tokio = { version = "1.0", features = ["full"] }
tokio-stream = "0.1"
futures = "0.3"
futures-util = "0.3"
bytes = "1.0"

# HTTP 客户端
reqwest = { version = "0.11", features = ["json", "stream", "multipart", "gzip"] }

# 序列化/反序列化
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
serde_yaml = "0.9"

# 配置管理
config = "0.14"

# 错误处理
anyhow = "1.0"
thiserror = "1.0"

# 日志
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter", "json"] }
tracing-appender = "0.2"

# 文件系统和路径
dirs = "5.0"

# 时间处理
chrono = { version = "0.4", features = ["serde"] }

# UUID 生成
uuid = { version = "1.0", features = ["v4", "serde"] }

# 终端相关
crossterm = "0.27"
ratatui = "0.26"
tui-input = "0.8"

# 图像处理 (为后续阶段准备)
image = { version = "0.24", optional = true }

# 语法高亮 (为后续阶段准备)
syntect = { version = "5.1", optional = true }

# 文件监控
notify = "6.1"
walkdir = "2.4"

# 正则表达式
regex = "1.10"

# 异步特征
async-trait = "0.1"

# TOML 解析
toml = "0.8"

# Base64 编码
base64 = "0.21"

# Web framework
axum = { version = "0.7", features = ["macros"] }
tower = { version = "0.4" }
tower-http = { version = "0.5", features = ["fs", "trace", "cors", "compression-full"] }

# 系统监控
num_cpus = "1.16"

# 高级功能依赖
bincode = "1.3"
md5 = "0.7"
redis = { version = "0.24", optional = true }

# 十六进制编码
hex = "0.4"

# 系统集成
open = "5.0"

[[bin]]
name = "test_cli"
path = "src/bin/test_cli.rs"

[features]
default = ["web-server"]
image-processing = ["image"]
syntax-highlighting = ["syntect"]
web-server = []

[dev-dependencies]
tempfile = "3.8"
tokio-test = "0.4"
criterion = { version = "0.5", features = ["html_reports"] }
mockall = "0.12"
wiremock = "0.6"
proptest = "1.0"
